# book-converter

./: .gitignore  .vercelignore  DEPLOY.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  README.md  app.py  convert_one.py  converter_zh.py  epub_io.py  main.py  pyproject.toml  render.yaml  requirements.txt  terminology_zh.py  translator_en.py  vercel.json
.cursor/rules/: auto-run.mdc
api/: health.py  index.py
shift-scheduler/: README.md  index.html
