[project]
name = "book-converter"
version = "0.1.0"
description = "書籍轉換工具：簡體/英文 epub → 臺灣繁體"
requires-python = ">=3.10"
dependencies = [
    "EbookLib>=0.18",
    "opencc-python-reimplemented>=0.1.7",
    "langdetect>=1.0.9",
    "translators>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
app = "app:app"

[tool.vercel]
framework = "flask"
